--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* google font link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 * {
     margin: 0;
@@ -9,24 +8,79 @@ body{
     font-family: 'Poppins', sans-serif;
    
 }
+img{
+    width:100%;
+}
+ 
+.courses-section .card img{
+    height:100%;
+    max-height:310px;
+}
+
 @media screen and (max-width:575px){
-    h1{
+    h1,h2{
         font-size:1rem;
+        
     }
+     
     p{
-        font-size:0.5rem;
+        font-size:0.6rem;
     }
+    h5{
+        font-size:0.86rem;
+    }
+    
    
     
 }
 @media screen and (min-width:576px) and (max-width:767px){
-    h1{
-        font-size:1rem;
+    h1,h2{
+        font-size:1.5rem;
+        
     }
+     
     p{
-        font-size:0.5rem;
+        font-size:0.75rem;
+    }
+    h5{
+        font-size:0.9rem;
     }
     
 }
+@media screen and (min-width:768px) and (max-width:991px){
+    h1,h2{
+        font-size:1.7rem;
+        
+    }
+     
+    p{
+        font-size:0.9rem;
+    }
+    h5{
+        font-size:1.3rem;
+    }
+    
+    
+}
+@media screen and (min-width:992px) and (max-width:1199px){
+    h1,h2{
+        font-size:1.2rem;
+        
+    }
+     
+    p{
+        font-size:0.5rem;
+    }
+    h5{
+        font-size:0.8rem;
+    }
+    
+}
+ 
+ 
+ 
+ 
+ 
+  
  
   
