--- a/style.css
+++ b/style.css
@@ -1,86 +1,114 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: 'Poppins', sans-serif;
-   
-}
-img{
-    width:100%;
-}
- 
-.courses-section .card img{
-    height:100%;
-    max-height:310px;
+
 }
 
-@media screen and (max-width:575px){
-    h1,h2{
-        font-size:1rem;
-        
-    }
-     
-    p{
-        font-size:0.6rem;
-    }
-    h5{
-        font-size:0.86rem;
-    }
-    
-   
-    
+img {
+    width: 100%;
 }
-@media screen and (min-width:576px) and (max-width:767px){
-    h1,h2{
-        font-size:1.5rem;
-        
-    }
-     
-    p{
-        font-size:0.75rem;
-    }
-    h5{
-        font-size:0.9rem;
-    }
-    
+
+.courses-section .card img {
+    height: 100%;
+    max-height: 310px;
+
 }
-@media screen and (min-width:768px) and (max-width:991px){
-    h1,h2{
-        font-size:1.7rem;
-        
+
+@media screen and (max-width:575px) {
+
+    h1,
+    h2 {
+        font-size: 1rem;
+
     }
-     
-    p{
-        font-size:0.9rem;
+
+    p {
+        font-size: 0.9rem;
     }
-    h5{
-        font-size:1.3rem;
+
+    header p {
+        font-size: 0.5rem;
     }
-    
-    
+
+    h5 {
+        font-size: 1rem;
+    }
+
+
+
 }
-@media screen and (min-width:992px) and (max-width:1199px){
-    h1,h2{
-        font-size:1.2rem;
-        
+
+@media screen and (min-width:576px) and (max-width:767px) {
+
+    h1,
+    h2 {
+        font-size: 1.5rem;
+
     }
-     
-    p{
-        font-size:0.5rem;
+
+    header p {
+        font-size: 0.7rem;
     }
-    h5{
-        font-size:0.8rem;
+
+
+    p {
+        font-size: 0.9rem;
     }
-    
+
+    h5 {
+        font-size: 1rem;
+    }
+
 }
- 
- 
- 
- 
- 
-  
- 
-  
+
+@media screen and (min-width:768px) and (max-width:991px) {
+
+    h1,
+    h2 {
+        font-size: 1.7rem;
+
+    }
+
+    header p {
+        font-size: 0.8rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+
+    h5 {
+        font-size: 1.3rem;
+    }
+
+
+}
+
+@media screen and (min-width:992px) and (max-width:1199px) {
+
+    h1,
+    h2 {
+        font-size: 2.5rem;
+
+    }
+
+    header p {
+        font-size: 0.9rem;
+    }
+
+    p {
+        font-size: 0.9rem;
+    }
+
+    h5 {
+        font-size: 1.2rem;
+    }
+
+}
